tests/runnable/test_11_op_complex.hd
// test 11 : Tests operator complex
// Parser / Lexer Valid: Yes

void main()
{
    print true == ((true == (0 < 3)) == false);
}