tests/invalid/test_30_func_keyword.hd
// test 30 : uses keyword void for function name
// Parser / Lexer Valid: Yes

void void() {}